--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="docs/css/main.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
   <title>About Me</title>
 </head>
@@ -47,7 +47,7 @@
         Let me tell you a few things...
       </h2>
       <div class="about-info">
-          <img src="img/portrait.jpg" alt="James Zhou" class="bio-image">
+          <img src="docs/img/portrait.jpg" alt="James Zhou" class="bio-image">
           <div class="bio">
               <h3 class="text-secondary">BIO</h3>
               <p>
@@ -84,6 +84,6 @@
     <footer id="main-footer">
         Copyright &copy; 2018
     </footer>
-    <script src="js/main.js"></script>
+    <script src="docs/js/main.js"></script>
 </body>
 </html>
