--- a/work.html
+++ b/work.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="docs/css/main.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
         crossorigin="anonymous">
     <title>View My Projects</title>
@@ -62,7 +62,7 @@
         <div class="projects">
             <div class="item">
                 <a href="#!">
-                    <img src="img/projects/project1.jpg" alt="Project">
+                    <img src="docs/img/projects/project1.jpg" alt="Project">
                 </a>
                 <a href="#" class="btn-light">
                     <i class="fas fa-eye"></i> Project
@@ -74,7 +74,7 @@
 
             <div class="item">
                 <a href="#!">
-                    <img src="img/projects/project2.jpg" alt="Project">
+                    <img src="docs/img/projects/project2.jpg" alt="Project">
                 </a>
                 <a href="#" class="btn-light">
                     <i class="fas fa-eye"></i> Project
@@ -86,7 +86,7 @@
 
             <div class="item">
                 <a href="#!">
-                    <img src="img/projects/project3.jpg" alt="Project">
+                    <img src="docs/img/projects/project3.jpg" alt="Project">
                 </a>
                 <a href="#" class="btn-light">
                     <i class="fas fa-eye"></i> Project
@@ -98,7 +98,7 @@
 
             <div class="item">
                 <a href="#!">
-                    <img src="img/projects/project4.jpg" alt="Project">
+                    <img src="docs/img/projects/project4.jpg" alt="Project">
                 </a>
                 <a href="#" class="btn-light">
                     <i class="fas fa-eye"></i> Project
@@ -110,7 +110,7 @@
 
             <div class="item">
                 <a href="#!">
-                    <img src="img/projects/project5.jpg" alt="Project">
+                    <img src="docs/img/projects/project5.jpg" alt="Project">
                 </a>
                 <a href="#" class="btn-light">
                     <i class="fas fa-eye"></i> Project
@@ -125,7 +125,7 @@
     <footer id="main-footer">
         Copyright &copy; 2018
     </footer>
-    <script src="js/main.js"></script>
+    <script src="docs/js/main.js"></script>
 </body>
 
 </html>
