--- a/index.html
+++ b/index.html
@@ -1,66 +1,226 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="docs/css/main.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
-  <title>Welcome To My Website</title>
-</head>
-<body id="bg-img">
-    <header>
-      <div class="menu-btn">
-        <div class="btn-line"></div>
-        <div class="btn-line"></div>
-        <div class="btn-line"></div>
-      </div>
+  <html>
+    <head>  
+      <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+      <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
+      <title>James Zhou</title>
 
-      <nav class="menu">
-        <div class="menu-branding">
-          <div class="portrait">
+      <link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
+      <link rel="apple-touch-icon" href="img/touch-icon-iphone.png" />
+       <!-- CSS  -->      
+      <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+      <!-- Font Awesome -->
+      <link href="css/font-awesome.css" rel="stylesheet">
+      <!-- Skill Progress Bar -->
+      <link href="css/pro-bars.css" rel="stylesheet" type="text/css" media="all" />
+      <!-- Owl Carousel -->
+      <link rel="stylesheet" href="css/owl.carousel.css">
+      <!-- Default Theme CSS File-->
+      <link id="switcher" href="css/themes/lite-blue-theme.css" type="text/css" rel="stylesheet" media="screen,projection"/>     
+      <!-- Main css File -->
+      <link href="style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 
+      <!-- Font -->
+      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+
+    </head>
+
+    <body>
+        <div id="preloader">        
+            <div class="progress">
+              <div class="indeterminate"></div>
+            </div>        
           </div>
-        </div>
-        <ul class="menu-nav">
-            <li class="nav-item current">
-              <a href="#" class="nav-link"><strong>Home</strong></a>
-            </li>
-            <li class="nav-item">
-              <a href="about.html" class="nav-link"><strong>About Me</strong></a>
-            </li>
-            <li class="nav-item">
-              <a href="work.html" class="nav-link"><strong>Work</strong></a>
-            </li>
-            <li class="nav-item">
-              <a href="contact.html" class="nav-link"><strong>Contact</strong></a>
-            </li>
-        </ul>
-      </nav>
-    </header>
+      <header id="header" role="banner">
+        <div class="navbar-fixed">
+          <nav>
+            <div class="container">
+              <div class="nav-wrapper">
 
-    <main id="home">
-      <h1 class="lg-heading">
-        James <span class="text-secondary">Zhou</span>
-      </h1>
-      <h2 class="sm-heading">
-        Engineer, Programmer, Designer & Student
-      </h2>
-      <div class="icons">
-        <a href="https://www.instagram.com/jamesizhou/" target="_blank">
-          <i class="fab fa-instagram fa-2x"></i>
-        </a>
-        <a href="#">
-          <i class="fab fa-facebook fa-2x"></i>
-        </a>
-        <a href="https://www.linkedin.com/in/james-zhou-00b395b6/" target="_blank">
-          <i class="fab fa-linkedin fa-2x"></i>
-        </a>
-        <a href="https://github.com/Farwhyn" target="_blank">
-          <i class="fab fa-github fa-2x"></i>
-        </a>
+                <!-- LOGO -->
+
+                <!-- TEXT BASED LOGO -->
+                <a href="#" class="brand-logo">James Zhou</a>
+
+                <!-- Image Based Logo -->                
+                 <!-- <a href="index.html" class="brand-logo"><img src="img/logo.jpeg" alt="logo img"></a>  -->
+                <ul class="right hide-on-med-and-down custom-nav menu-scroll">
+                  <li><a href="#resume">Skills</a></li>
+                  <li><a href="#portfolio">Portfolio</a></li>
+                </ul>
+                <!-- For Mobile View -->
+                <ul id="slide-out" class="side-nav menu-scroll">
+                  <li><a href="#resume">Skills</a></li>
+                  <li><a href="#portfolio">Portfolio</a></li>
+                </ul>
+                <a href="#" data-activates="slide-out" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
+              </div>
+            </div>
+          </nav>
+        </div>  
+      </header>
+      <div class="main-wrapper">
+        <main role="main">
+          <!-- START HOME SECTION -->
+          <section id="home">
+            <div class="overlay-section">
+              <div class="container">
+                <div class="row">
+                  <div class="col s12">
+                    <div class="home-inner">
+                      <img class="circle profile-img" src="img/best_profile.jpg" alt="Profile Image">
+                      <p>Hello! I'm currently a 5th year undergraduate Computer Engineering student at UBC, looking for full-time opportunities starting May 2019. 
+						In my spare time I like to make interesting projects, and you can check them out below. Thanks for stopping by!
+					  </p>
+                      <!-- <a class="hire-me-btn btn waves-effect waves-light btn-large" href="#footer">Hire Me <i class="mdi-content-send left"></i>                     
+                      </a> -->
+                      <div class="row">
+                        <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/jamesizhou/"><i class="fab fa-linkedin"></i></a>
+                        <a target="_blank" rel="noopener noreferrer" href="https://www.github.com/Farwhyn"><i class="fab fa-github-square"></i></a>
+                        <a target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/jamesizhou/"><i class="fab fa-instagram"></i></a>
+                        <a href="mailto:farwhyn@alumni.ubc.ca"><i class="fas fa-envelope-square"></i></a>
+                      </div>
+                      <!-- Call to About Button -->
+                      <!--<button class="btn btn-floating waves-effect waves-light btn-large white call-to-about"><i class="material-icons">play_for_work</i></button>-->                  
+                    </div>
+                  </div>  
+                </div>
+              </div>
+            </div>
+          </section>
+          <!-- Start Resume -->
+          <section id="resume">
+            <!-- Start Skill -->
+            <section id="skill">
+              <div class="container">
+                <div class="skill-inner">
+                  <h2 class="title">Skills</h2>
+
+                  <!-- Start skills progress bar -->
+
+                  <div class="skill-progress-bar">
+                    <span>JavaScript</span>
+                    <div class="pro-bar-container color-wisteria">
+                      <div class="pro-bar bar-100 color-amethyst" data-pro-bar-percent="100"></div>
+                    </div>
+                    <span>Python</span>
+                    <div class="pro-bar-container color-wisteria">
+                      <div class="pro-bar bar-90 color-amethyst" data-pro-bar-percent="90" data-pro-bar-delay="100"></div>
+                    </div>
+                    <span>Java</span>
+                    <div class="pro-bar-container color-wisteria">
+                      <div class="pro-bar bar-80 color-amethyst" data-pro-bar-percent="80" data-pro-bar-delay="200"></div>
+                    </div>
+                    <span>C#</span>
+                    <div class="pro-bar-container color-wisteria">
+                      <div class="pro-bar bar-70 color-amethyst" data-pro-bar-percent="70" data-pro-bar-delay="300"></div>
+                    </div>
+                    <span>C</span>
+                    <div class="pro-bar-container color-wisteria">
+                      <div class="pro-bar bar-60 color-amethyst" data-pro-bar-percent="60" data-pro-bar-delay="400"></div>
+                    </div>
+                    <span>SQL</span>
+                    <div class="pro-bar-container color-wisteria">
+                      <div class="pro-bar bar-50 color-amethyst" data-pro-bar-percent="50" data-pro-bar-delay="500"></div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </section>
+          </section>
+          <!-- Start Portfolio -->
+          <section id="portfolio">
+            <div class="portfolio-top">
+              <div class="container">
+                <div class="portfolio-top-inner">
+                   <h2 class="title">Portfolio</h2>
+                   <div class="controls">  
+                    <button class="filter waves-effect waves-light btn" data-filter="all">All</button>
+                    <button class="filter waves-effect waves-light btn" data-filter=".hardware">Hardware</button>
+                    <button class="filter waves-effect waves-light btn" data-filter=".web">Web</button>
+                    <button class="filter waves-effect waves-light btn" data-filter=".mobile">Mobile</button>
+                </div>
+              </div>
+            </div>
+            </div>
+            <div class="portfolio-bottom">
+              <div class="container">
+                <div class="portfolio-bottom-inner">
+                  <div id="portfolio-list">                    
+                    <div class="mix hardware" data-value="2">
+                      <a href="#">
+                        <img src="img/portfolio/m2m.jpg" alt="img">
+                        <<i class="material-icons view-icon">pageview</i>>
+                      </a>
+                    </div>
+                    <div class="mix web" data-value="4">
+                      <a href="#">
+                        <img src="img/portfolio/screenshots.gif" alt="img">
+                        <i class="material-icons view-icon">pageview</i>           
+                      </a>
+                    </div>
+                    <div class="mix hardware" data-value="1">
+                      <a href="#">
+                        <img src="img/portfolio/scanner.jpg" alt="img">
+                        <i class="material-icons view-icon">pageview</i>
+                      </a>
+                    </div>
+                    <div class="mix web" data-value="5">
+                      <a href="#">
+                        <img src="img/portfolio/brain.jpg" alt="img">
+                        <i class="material-icons view-icon">pageview</i>
+                      </a>
+                    </div>
+                    <div class="mix mobile" data-value="3">
+                      <a href="#">
+                        <img src="img/portfolio/timetrip.png" alt="img">
+                        <i class="material-icons view-icon">pageview</i>
+                      </a>
+                    </div>                 
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
+         
+          <!-- Start Footer -->
+          <footer id="footer" role="contentinfo">
+           
+            <!-- Start Footer Bottom -->
+            <div class="footer-bottom">
+              <div class="container">
+                <div class="row">
+                  <div class="col s12">
+                    <div class="footer-inner">
+                      <!-- Bottom to Up Btn -->
+                      <button class="btn-floating btn-large up-btn"><i class="mdi-navigation-expand-less"></i></button>
+                     <p class="design-info">&copy; 2019 James Zhou</a></p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </footer>
+        </main>
       </div>
-    </main>
-    <script src="docs/js/main.js"></script>
-</body>
-</html>
+      <!-- jQuery Library -->
+      <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+      <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
+      <!-- Materialize js -->
+      <script src="js/materialize.min.js"></script>
+      <!-- Skill Progress Bar -->
+      <script src="js/appear.min.js" type="text/javascript"></script>
+      <script src="js/pro-bars.min.js" type="text/javascript"></script>
+      <!-- Owl slider -->      
+      <script src="js/owl.carousel.min.js"></script>    
+      <!-- Mixit slider  -->
+      <script src="http://cdn.jsdelivr.net/jquery.mixitup/latest/jquery.mixitup.min.js"></script>
+      <!-- counter -->
+      <script src="js/waypoints.min.js"></script>
+      <script src="js/jquery.counterup.min.js"></script>     
+
+      <!-- Custom Js -->
+      <script src="js/custom.js"></script>      
+    </body>
+  </html>
