--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <div class="row">
                   <div class="col s12">
                     <div class="home-inner">
-                      <img class="circle profile-img" src="img/best_profile.jpg" alt="Profile Image">
+                      <img class="circle profile-img" src="img/best.jpg" alt="Profile Image">
                       <p>Hello! I'm currently a 5th year undergraduate Computer Engineering student at UBC, looking for full-time opportunities starting May 2019. 
 						In my spare time I like to make interesting projects, and you can check them out below. Thanks for stopping by!
 					  </p>
