--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
         </main>
       </div>
 
-      <div id="modalresume" class="modal">
+      <div id="modalresume" class="modal modal-fixed-footer">
         <div class="modal-content">
             <h5 style="font-size: 30px">Resume</h5>
             <embed src="developer_resume.pdf" type="application/pdf" width="100%" height="400px" />
@@ -209,8 +209,8 @@
       <div class="fixed-action-btn">
         <a href = "#" class="btn-floating red btn-large"><i class="large material-icons">expand_less</i></a>
         <ul>
-          <li><a href='#about' class="btn-floating yellow btn-large tooltipped" data-position="left" data-tooltip="About Me"><i class="large material-icons">info</i></a></li>
-          <li><a href='#portfolio' class="btn-floating blue btn-large tooltipped" data-position="left" data-tooltip="Portfolio"><i class="large material-icons">laptop</i></a></li>
+          <li><a href='#about' class="btn-floating yellow btn-large"><i class="large material-icons">info</i></a></li>
+          <li><a href='#portfolio' class="btn-floating blue btn-large"><i class="large material-icons">laptop</i></a></li>
         </ul>
       </div>
       <!-- jQuery Library -->
